# school-manager

./: .gitignore  Cargo.toml
src/: config.rs  errors.rs  logger.rs  main.rs
src/auth/: middleware.rs  mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/routes/: mod.rs
src/services/: mod.rs
