[package]
name = "sch_mgt_sys"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = "0.4.44"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22", features = ["fmt", "env-filter"]}
uuid = {version = "1.21.0", features = ["v4", "serde"]}
